# MECALS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
als/: CMakeLists.txt
als/src/: als.cc  als.h  cryptominisat.h  cut.cc  cut.h  error.cc  error.h  espressoApi.h  header.h  lac.cc  lac.h  main.cc  my_abc.cc  my_abc.h  my_util.h  simulator.cc  simulator.h
input/miter/: width_129_maxse_18446744065119617025.aig  width_129_maxse_18446744065119617025.v  width_129_maxse_340282366920938463426481119284349108225.aig  width_129_maxse_340282366920938463426481119284349108225.v  width_129_maxse_4294836225.aig  width_129_maxse_4294836225.v  width_129_maxse_79228162514263774643590529025.aig  width_129_maxse_79228162514263774643590529025.v  width_129_mhd_16.aig  width_129_mhd_16.blif  width_129_mhd_16.v  width_129_mhd_32.aig  width_129_mhd_32.blif  width_129_mhd_32.v  width_129_mhd_48.aig  width_129_mhd_48.blif  width_129_mhd_48.v  width_129_mhd_65.aig  width_129_mhd_65.blif  width_129_mhd_65.v  width_129_wce_281474976710656.aig  width_129_wce_281474976710656.blif  width_129_wce_281474976710656.v  width_129_wce_36893488147419103232.aig  width_129_wce_36893488147419103232.blif  width_129_wce_36893488147419103232.v  width_129_wce_4294967296.aig  width_129_wce_4294967296.blif  width_129_wce_4294967296.v  width_129_wce_65536.aig  width_129_wce_65536.blif  width_129_wce_65536.v  width_16_maxse_1.aig  width_16_maxse_1.blif  width_16_maxse_1.v  (+933 more)
misc/: diagram.pptx
script/: deal_tradeoff.py  get_max_error.py  paint.py  run.py  run_tradeoff.py  synth.py  trunc.py
(+14026 files in other folders)
